# fastdb

./: .gitignore  CMakeLists.txt  README.md
dump-fastdb/: CMakeLists.txt  dump-fastdb-ex.cpp
examples/python/: column_way.py  shared_memory.py  truncate_block.py
fastdb/: CMakeLists.txt
fastdb/include/: fastdb-config.h  fastdb-geometry-utils.h  fastdb.h
fastdb/src/: FastVectorDb.cpp  FastVectorDbBuild.cpp  FastVectorDbBuild_p.h  FastVectorDbLayer.cpp  FastVectorDbLayerBuild.cpp  FastVectorDbLayerBuild_p.h  FastVectorDbLayer_p.h  FastVectorDb_p.h  FastVectorTileDb.cpp  FastVectorTileDb_p.h  TileBoxTake.cpp  TileBoxTake_p.hpp
fastdb/swig/: fastdb4py.i
lib/: CMakeLists.txt
lib/clipper/: CMakeLists.txt
lib/gaiageo/: CMakeLists.txt
lib/gaiageo/headers/: spatialite_private.h
lib/gaiageo/headers/spatialite/: config.h  gaiaconfig-msvc.h  gaiaconfig.h  gaiageo.h  gg_core.h  gg_formats.h
lib/gaiageo/src/: Ewkt.inl  geoJSON.h  gg_advanced.c  gg_endian.c  gg_ewkt.c  gg_extras.c  gg_geoJSON.c  gg_geometries.c  gg_kml.c  gg_shape.c  gg_vanuatu.c  gg_voronoj.c  gg_wkb.c  gg_wkt.c  sqlite.c  vanuatuWkt.inl
lib/gpc/: CMakeLists.txt
make-fastdb/: CMakeLists.txt  make-fast-db-ex.cpp
python/: .gitignore  __init__.py
python/fastdb/: __init__.py  pipe.py  type.py
python/fastdb/block/: __init__.py  feature_nouse.py  layer.py
python/fastdb/core/: __init__.py
python/fastdb/pipe/: __init__.py  base.py  feature_pipe.py  utils.py
test/: create-db-test.py  load-db-test.py  node-test.js  shared-memo-test.py
